name:                valhalla-engine
version:             0.1.0.0
synopsis:            --TODO
description:         --TODO
homepage:            https://github.com/drobnik/valhalla-engine#readme
license:             BSD3
license-file:        LICENSE
author:              Karolina Drobnik
maintainer:          karolinadrobnik[at]gmail[dot]com
copyright:           2016 Karolina Drobnik
category:            Game Engine
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/Sample/, src/Engine/
  other-modules:       Engine, Engine.InputHandler, Engine.Datas
                     , Render.WindowManager, GameState, Engine.Consts
                     , Render.Utils, Render.Primitives, Engine.Loader
                     , Render.Model, GameData, Paths_valhalla_engine
  exposed-modules:     GameMain

  build-depends:       base >= 4.7 && < 5
                     , OpenGL, sdl2 >= 2.1.3, time, containers
                     , transformers, text
  default-language:    Haskell2010

-- -threaded -Wall -rtsopts -with-rtsopts=-N

executable valhalla-engine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , valhalla-engine
  default-language:    Haskell2010

test-suite valhalla-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , valhalla-engine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/drobnik/valhalla-engine
