name:                valhalla-engine
version:             1.0
synopsis:
description:         A simple, purely functional game engine
homepage:            https://github.com/drobnik/valhalla-engine#readme
license:             MIT
license-file:        LICENSE
author:              Karolina Drobnik
maintainer:          karolinadrobnik[at]gmail[dot]com
copyright:           2017 Karolina Drobnik
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

data-files:
           example_data/*.bmp
           example_data/*.txt

library
  hs-source-dirs:      src, src/Sample/, src/Engine/
  other-modules:       Engine, Engine.InputHandler, Engine.Datas
                     , Render.WindowManager, GameState, Engine.Consts
                     , Render.Utils, Render.Primitives, Engine.Loader
                     , Render.Model, GameData, World, Engine.Timer
                     , Engine.Collision, Engine.Physics
                     , Paths_valhalla_engine
  exposed-modules:     GameMain

  build-depends:       base >= 4.7 && < 5
                     , sdl2 >= 2.1.3, containers
                     , transformers, text, split
  default-language:    Haskell2010


executable valhalla-engine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -rtsopts -O2
  build-depends:       base
                     , valhalla-engine
  default-language:    Haskell2010

test-suite valhalla-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , valhalla-engine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/drobnik/valhalla-engine
